Fixes for add new item
(cherry picked from commit f3a0d7f2239283499c0218e7a05c30c2705c2e3e)